# Mehrmux

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json
src/: App.jsx  cli.rs  custom.d.ts  main.rs  process_gen.rs  queue_engine.rs  simulator.rs  ui_storage.jsx  ui_storage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cli.rs  lib.rs  process_gen.rs  queue_engine.rs  simulator.rs
src/Components/: algoChoose.jsx  algoChoose.tsx  chart.jsx  dino.jsx  ganttCont.jsx  ganttCont.tsx  ioCont.jsx  test.jsx  titlebar.jsx
src/styles/: App.css  algoChoose.module.css  ganttchart.module.css  iocont.module.css  titlebar.module.css
